--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -121,7 +121,7 @@ body {
 }
 
 .menu {
-  & h1 {
+  &__heading {
     font-family: 'Shrikhand', cursive;
     font-size: 1.35em;
   }
@@ -133,10 +133,16 @@ body {
   }
   & h3 {
     font-size: 1em;
-}
+  }
   &__card-paragraph {
     font-size: 0.8em;
   }
+
+  &__price {
+    font-size: 0.9em;
+    font-weight: 500;
+    
+   }
 
 }
 
