--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,18 +1,16 @@
 .header {
-    text-align: center;
     &__logo-container {
         width:100%;
         height:50px;
         background-color: map-get($bg-color,bg-white);
+        @include flex(flex,null,center,row);
         filter: drop-shadow(0px 4px 4px $sh-white);
-        @include flex(flex,center,null,null);
-        position: relative;
+        justify-content: center;
       }
-    &__logo {
+      &__logo {
+        @include flex(flex,center,null,null);
         height:25px;
         object-fit: contain;
-        position:absolute;
-        bottom:10px;
       }
     &__location {
         background-color: map-get($bg-color,bg-grey);
@@ -27,6 +25,7 @@
       line-height: 50px;
       }
     &__nav {
+      text-align: center;
       padding-bottom: 50px;
       background-color: map-get($bg-color,bg-light-grey);
       @include media-q (medium-devices) {
@@ -65,6 +64,11 @@
         {display: none;}
       }
       }
+    &__image {
+      width: 100%;
+      height: 317px;
+      object-fit:cover;
+    }
   }
 
 
