--- a/sass/layout/_page-1.scss
+++ b/sass/layout/_page-1.scss
@@ -1,14 +1,51 @@
 
 
 .menu {
-    text-align: left;
+    background-color: map-get($bg-color,bg-grey);
+    clip-path: inset(100% 100% round 2rem 2rem 0rem 0rem);
+    padding-top: 2px;
+    padding-bottom: 30px;
+    margin-top: -30px;
+    position: relative;
+    width: auto;
+    @include media-q(medium-devices) {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    &__arrow {
+        position: absolute;
+        color:black;
+        left:20px;
+        &:hover {
+            color:$color-dark-grey;
+        }
+    }
     &__container {
-        background-color: map-get($bg-color,bg-grey);
-        clip-path: inset(100% 100% round 2rem 2rem 0rem 0rem);
-        padding-top: 2px;
-        margin-top: -30px;
-        padding-left: 20px;
-        position: relative;
+        width:90%;
+        margin: auto;
+        @include media-q(medium-devices) {
+            width:50%;
+        }
+        @include media-q(desktop) {
+            width:70%;
+        }
+
+    }
+    &__cards {
+        margin-bottom: 30px;
+    }
+    &__card {
+        width: 100%;
+        border-radius: 10px;
+         overflow: hidden;
+        &:hover .menu__slide, &:hover .menu__price {
+            transform: translateX(-50px);
+        }
+    }
+    
+    &__heading {
+        text-align: center;
     }
     & h2 {
         border-bottom: 2px solid $tertiary-color;
@@ -18,29 +55,57 @@
         margin: 0;
     }
     &__card-text {
+        padding-left: 10px;
         @include flex(flex,null,null,column);
-
+        width:88%;
       }
     &__price {
-        top:10;
-        right:-78px;
+        position: absolute;
+        right:10px;
+        transform: translateX(0);
+        transition: transform 400ms ease-in-out;
     }
+  
+    &__slide {
+        height:100%;
+        width:10%;
+        right:-50px;
+        position: absolute;
+        background-color: $tertiary-color;
+        background-clip: border-box;
+        transform: translateX(0px);
+        transition: transform 400ms ease-in-out;
+
+    }
+
+    &__circle, &__check {
+        position: absolute;
+        right: 10px;
+        top:20px;
+        color:white;
+        &.menu__check{
+            color: $tertiary-color;
+            z-index:1;
+        }
+
+    }
+ 
     &__heart-icon-border,&__heart-icon-solid {
         color:rgb(0, 0, 0);
-        top:28px;
-        right:40px;
+        padding-left: 10px;
         z-index: 2;
         position: absolute;
-        transform: scale(1.2);
+        transform: scale(0.9);
+        line-height: 31px;
         &.menu__heart-icon-solid{
-          z-index: 1;
-          background: $gradient;
-          background-clip: text;
-          -webkit-text-fill-color: transparent;
-          background-repeat: no-repeat;
-          transform: scale(0);
-          transition: transform 200ms ease-in-out;
-          
+            z-index: 1;
+            background: $gradient;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-repeat: no-repeat;
+            transform: scale(0);
+            transition: transform 200ms ease-in-out;
+            transform-origin: 20px 15px;
         }
         &:hover + .menu__heart-icon-solid{
           background: $gradient;
@@ -51,4 +116,6 @@
     
       }
   }
+
+
   
