--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -26,21 +26,21 @@
   }
 }
 
-       // **solor-shift**
+       // **color-shift**
 
-@function shadowshift($shadow-color:$shadow,$backgd-clr:$bg-color) {
-  @each $color, $color-value in $bg-color {
-  @if (lightness($color) == 100%) {
-    @return $shadow-color;
+// @function shadowshift($shadow-color:$shadow,$backgd-clr:$bg-color) {
+//   @each $color, $color-value in $bg-color {
+//   @if (lightness($color) == 100%) {
+//     @return $shadow-color;
     
-  } @if (lightness($backgd-clr) < 20%) {
-    @return darken($shadow-color,20%);
-  }
-}}
+//   } @if (lightness($backgd-clr) < 20%) {
+//     @return darken($shadow-color,20%);
+//   }
+// }}
 
-@mixin shadow-darkener($shadow-color:$shadow) {
-  filter:drop-shadow(0px 4px 4px shadowshift($shadow-color,$background-clr));
-}
+// @mixin shadow-darkener($shadow-color:$shadow) {
+//   filter:drop-shadow(0px 4px 4px shadowshift($shadow-color,$background-clr));
+// }
 
        // **buttons**
        
@@ -72,10 +72,9 @@
        &__#{$section} {
         background-color: map-get($bg-color,bg-light-grey);
         border-radius: 20px;
-        width: 85%;
+        width: 90%;
         height:65px;
         white-space: nowrap;
-        padding-left: 30px;
         filter: drop-shadow(0px 4px 4px $sh-white);
         @include flex(flex,null,center,row);
         @include media-q(medium-devices) {
