--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,7 +177,7 @@ body a {
 .menu__card, .operation__card {
   background-color: #F6F6F6;
   border-radius: 20px;
-  width: 90%;
+  width: 100%;
   height: 65px;
   white-space: nowrap;
   filter: drop-shadow(0px 4px 4px #ccc);
@@ -187,14 +187,12 @@ body a {
 }
 @media (min-width: 767px) {
   .menu__card, .operation__card {
-    height: 53px;
-    width: 190px;
+    width: 30%;
   }
 }
 @media (min-width: 1023px) {
   .menu__card, .operation__card {
-    height: 53px;
-    width: 218px;
+    width: 250px;
   }
 }
 .menu__card:hover, .operation__card:hover {
@@ -295,7 +293,7 @@ body .main-container {
 .operation__card {
   background-color: #F6F6F6;
   border-radius: 20px;
-  width: 90%;
+  width: 100%;
   height: 65px;
   white-space: nowrap;
   filter: drop-shadow(0px 4px 4px #ccc);
@@ -305,14 +303,12 @@ body .main-container {
 }
 @media (min-width: 767px) {
   .operation__card {
-    height: 53px;
-    width: 190px;
+    width: 30%;
   }
 }
 @media (min-width: 1023px) {
   .operation__card {
-    height: 53px;
-    width: 218px;
+    width: 250px;
   }
 }
 .operation__card:hover {
@@ -345,6 +341,7 @@ body .main-container {
 @media (min-width: 767px) {
   .operation__cards {
     display: flex;
+    justify-content: center;
     flex-direction: row;
     height: 53px;
   }
@@ -592,6 +589,9 @@ body .main-container {
     flex-direction: row;
   }
 }
+.footer__links:hover {
+  text-decoration: underline;
+}
 .footer__links-icon, .footer__links-iconless {
   display: flex;
   flex-direction: column;
@@ -651,24 +651,37 @@ body .main-container {
 }
 @media (min-width: 767px) {
   .menu__container {
-    width: 50%;
-  }
-}
-@media (min-width: 1023px) {
-  .menu__container {
     width: 70%;
   }
 }
 .menu__cards {
   margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  height: auto;
 }
 .menu__card {
-  width: 100%;
   border-radius: 10px;
   overflow: hidden;
+  display: flex;
+  flex-direction: row;
+}
+@media (min-width: 767px) {
+  .menu__card {
+    width: 100%;
+  }
 }
 .menu__card:hover .menu__slide, .menu__card:hover .menu__price {
   transform: translateX(-50px);
+}
+.menu__card:hover .menu__card-text {
+  width: 10em;
+}
+@media (min-width: 767px) {
+  .menu__card:hover .menu__card-text {
+    width: 40em;
+  }
 }
 .menu__heading {
   text-align: center;
@@ -682,19 +695,25 @@ body .main-container {
 }
 .menu__card-text {
   padding-left: 10px;
+  width: 15em;
+  transition: all 400ms;
   display: flex;
   flex-direction: column;
-  width: 88%;
+}
+.menu__card-heading, .menu__card-paragraph {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .menu__price {
   position: absolute;
   right: 10px;
+  top: 33px;
   transform: translateX(0);
   transition: transform 400ms ease-in-out;
 }
 .menu__slide {
-  height: 100%;
-  width: 10%;
+  height: 65px;
+  width: 50px;
   right: -50px;
   position: absolute;
   background-color: #99E2D0;
@@ -704,8 +723,9 @@ body .main-container {
 }
 .menu__circle, .menu__check {
   position: absolute;
-  right: 10px;
-  top: 20px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   color: white;
 }
 .menu__circle.menu__check, .menu__check.menu__check {
