--- a/sass/layout/_page-1.scss
+++ b/sass/layout/_page-1.scss
@@ -25,23 +25,32 @@
         width:90%;
         margin: auto;
         @include media-q(medium-devices) {
-            width:50%;
-        }
-        @include media-q(desktop) {
             width:70%;
         }
-
     }
     &__cards {
         margin-bottom: 30px;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        height: auto;
     }
     &__card {
-        width: 100%;
         border-radius: 10px;
-         overflow: hidden;
+        overflow: hidden;
+        display: flex;
+        flex-direction: row;
+        @include media-q(medium-devices) {
+            width: 100%;
+        }
         &:hover .menu__slide, &:hover .menu__price {
             transform: translateX(-50px);
         }
+        &:hover .menu__card-text {
+            width:10em;
+            @include media-q(medium-devices) {
+                width:40em;
+        } }
     }
     
     &__heading {
@@ -56,32 +65,41 @@
     }
     &__card-text {
         padding-left: 10px;
+        width: 15em; 
+        transition: all 400ms;
         @include flex(flex,null,null,column);
-        width:88%;
+        // width:100px;
+        
       }
+    &__card-heading, &__card-paragraph {
+        
+        overflow: hidden;
+        text-overflow: ellipsis; 
+        
+    }
     &__price {
         position: absolute;
         right:10px;
+        top:33px;
         transform: translateX(0);
         transition: transform 400ms ease-in-out;
     }
-  
     &__slide {
-        height:100%;
-        width:10%;
+        height:65px;
+        width:50px;
         right:-50px;
         position: absolute;
         background-color: $tertiary-color;
         background-clip: border-box;
         transform: translateX(0px);
         transition: transform 400ms ease-in-out;
-
     }
 
     &__circle, &__check {
         position: absolute;
-        right: 10px;
-        top:20px;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
         color:white;
         &.menu__check{
             color: $tertiary-color;
