--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -72,18 +72,18 @@
        &__#{$section} {
         background-color: map-get($bg-color,bg-light-grey);
         border-radius: 20px;
-        width: 90%;
+        width: 100%;
         height:65px;
         white-space: nowrap;
         filter: drop-shadow(0px 4px 4px $sh-white);
         @include flex(flex,null,center,row);
         @include media-q(medium-devices) {
-          height:53px;
-          width: 190px;
+          // height:53px;
+          width: 30%;
         }
         @include media-q(desktop) {
-          height:53px;
-          width: 218px;
+          // height:53px;
+          width: 250px;
         }
         &:hover {
           background-color: lighten(map-get($bg-color,bg-light-grey),0.5%);
