--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -96,6 +96,34 @@
     }
   }
 
+  
+$menu-load-duration: 600ms;
+$num-menus:3;
+$menu-load-delay: $menu-load-duration / $num-menus;
+
+  @keyframes menu-load {
+    from {
+      transform: scaleX(0);
+    }
+    to {
+      transform: scaleX(1);
+
+    }
+  }
+
+@keyframes text-load {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+
+  }
+}
+
+.reveal-text {
+  animation: text-load 1s 1.3s both ;  
+}
 
 
 
