--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -47,7 +47,7 @@ $gradient:linear-gradient(0deg, $primary-color  0%, $secondary-color 100%);
 
 
 
-// $card-categories:(operation, retaurants);
+// restaurants menu animations;
 
 
 
