--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,11 +3,13 @@
 @import "utils/variables";
 @import "utils/mixins";
 @import "components/buttons";
+@import "layout/loader";
 @import "layout/header";
 @import "base/base";
 @import "layout/article-operation";
 @import "layout/article_restaurants";
 @import "layout/footer";
 @import "layout/page-1";
+@import "layout/page-3";
 
 
