--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,6 @@
 @import "layout/article-operation";
 @import "layout/article_restaurants";
 @import "layout/footer";
-@import "layout/page-1";
-@import "layout/page-3";
+@import "layout/pages";
 
 
