--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -26,22 +26,6 @@
   }
 }
 
-       // **color-shift**
-
-// @function shadowshift($shadow-color:$shadow,$backgd-clr:$bg-color) {
-//   @each $color, $color-value in $bg-color {
-//   @if (lightness($color) == 100%) {
-//     @return $shadow-color;
-    
-//   } @if (lightness($backgd-clr) < 20%) {
-//     @return darken($shadow-color,20%);
-//   }
-// }}
-
-// @mixin shadow-darkener($shadow-color:$shadow) {
-//   filter:drop-shadow(0px 4px 4px shadowshift($shadow-color,$background-clr));
-// }
-
        // **buttons**
        
 
@@ -55,8 +39,9 @@
       background: $gradient;
       @include flex(flex,center,center,null);
       filter: drop-shadow(0px 4px 4px $sh-light-grey);
+      transition-duration: 300ms;
       &:hover {
-      filter: drop-shadow(0px 4px 4px darken($sh-light-grey, 20%));
+      filter: drop-shadow(0px 4px 4px darken(($sh-light-grey), 20%));
       background: linear-gradient(0deg, lighten($primary-color,5%)  0%, lighten($secondary-color,5%) 100%);
       }
       @include media-q (desktop) {
@@ -138,6 +123,8 @@ $menu-load-delay: calc($menu-load-duration / $num-menus);
  
   100% {
     opacity:0;
+    visibility: hidden;
+    display: none;
   }
 }
 
