--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -12,8 +12,6 @@ $sh-white: #ccc;
 $sh-light-grey: #c2c2c2;
 $sh-grey : #b8b8b8;
 
-
-
     // **components colors**
 
 $dot-color:#9356DC;
@@ -41,14 +39,7 @@ $gradient:linear-gradient(0deg, $primary-color  0%, $secondary-color 100%);
     // ** shadows colors**
  $shadow: rgb(214, 214, 214);
 
-     // **  categories**
 
-// $butt-categories:(menu,header);
-
-
-
-// restaurants menu animations;
-
-
+// 
 
 
