--- a/sass/layout/_article-operation.scss
+++ b/sass/layout/_article-operation.scss
@@ -34,8 +34,10 @@
       &:hover .operation__card-title {
         color:$color-dark-grey;
       }
-      &:hover .operation__dot {
-        background-color:$dot-color-hover;
+      &:hover .operation__dot{
+        &::before {
+          opacity: 0.2;
+        }
       }
     }
     &__icon {
@@ -44,7 +46,13 @@
         margin-bottom: 2px;
         padding-left: 30px;
         @include media-q(medium-devices){
-          margin-bottom: 0;
+          width:23px;
+          padding-left: 18px;
+          margin-bottom: 0;}
+        @include media-q(desktop){
+          width:30px;
+          padding-left: 30px;
+          margin-bottom: 2px;
         }
       }
     &__dot {
@@ -57,10 +65,26 @@
         left:-10px;
         text-align: center;
         line-height: 20px;
+        opacity: 1;
         @include media-q(medium-devices){        
           line-height: 16px;
           width:17px;
           height: 17px;
+        }
+        &::before {
+          content:"";
+          border-radius: 10px;
+          width:20px;
+          height: 20px;
+          background-color:white;
+          color:white;
+          position:absolute;
+          left: 0;
+          text-align: center;
+          line-height: 20px;
+          z-index:1;
+          opacity: 0;
+          transition: opacity 300ms;
         }
         }
   }
